violet: Add Official Maintainer Name

--- a/overlay/packages/apps/Settings/res/values/aosip_strings.xml
+++ b/overlay/packages/apps/Settings/res/values/aosip_strings.xml
@@ -15,5 +15,5 @@
      limitations under the License.
 -->
 <resources>
-<string name="maintainer_name">Mr. EndLess</string>
+<string name="maintainer_name">Arpon Sarkar</string>
 </resources>
