--- a/overlay/packages/apps/Settings/res/values/aosip_strings.xml
+++ b/overlay/packages/apps/Settings/res/values/aosip_strings.xml
@@ -16,4 +16,5 @@
 -->
 <resources>
 <string name="maintainer_name">Arpon Sarkar</string>
+<string name="maintainer_telegram">https://t.me/Arpon5691</string>
 </resources>
