--- a/overlay-bliss/packages/apps/Settings/res/values/config.xml
+++ b/overlay-bliss/packages/apps/Settings/res/values/config.xml
@@ -13,5 +13,5 @@
 
 <resources>
     <!-- Device specific doze package -->
-    <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
+    <string name="config_customDozePackage">com.custom.ambient.display/com.custom.ambient.display.DozeSettings</string>
 </resources>
